--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ asyncpg = "^0.27.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 pydantic = {extras = ["dotenv", "email"], version = "^2.3"}
 pydantic-settings = "^2.0.3"
+flask-sqlalchemy = "^3.1.1"
+toml = "^0.10.2"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "^2.0.1"
