--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@mui/x-date-pickers": "^6.17.0",
     "axios": "^1.5.1",
+    "moment": "^2.29.4",
     "next": "13.5.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "react-query": "^3.39.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "eslint": "^8",
