--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "next": "13.5.5",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18"
   },
   "devDependencies": {
