feat: make Dockerfile work with Cloud Run

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.11.1-slim-bullseye
 
 ENV PYTHONUNBUFFERED 1
-WORKDIR /build
+ENV APP_HOME /build
+WORKDIR $APP_HOME
 
 # Create venv, add it to path and install requirements
 RUN python -m venv /venv
@@ -14,11 +15,14 @@ RUN pip install -r requirements.txt
 RUN pip install uvicorn[standard]
 
 # Copy the rest of app
-COPY app app
-COPY alembic alembic
-COPY alembic.ini .
-COPY pyproject.toml .
-COPY init.sh .
+COPY app $APP_HOME/app
+COPY alembic $APP_HOME/alembic
+COPY alembic.ini $APP_HOME
+COPY pyproject.toml $APP_HOME
+COPY init.sh $APP_HOME
+COPY main.py $APP_HOME
+# This needs to be provided with correct .env file
+COPY .env $APP_HOME/.env
 
 # Create new user to run app process as unprivilaged user
 RUN addgroup --gid 1001 --system uvicorn && \
@@ -27,5 +31,5 @@ RUN addgroup --gid 1001 --system uvicorn && \
 # Run init.sh script then start uvicorn
 RUN chown -R uvicorn:uvicorn /build
 CMD bash init.sh && \
-    runuser -u uvicorn -- /venv/bin/uvicorn app.main:app --app-dir /build --host 0.0.0.0 --port 8000 --workers 2 --loop uvloop
-EXPOSE 8000
+    runuser -u uvicorn -- /venv/bin/uvicorn main:app --app-dir /build --host 0.0.0.0 --port 8080 --workers 2 --loop uvloop
+EXPOSE 8080
