--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ asyncpg = "^0.27.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 pydantic = {extras = ["dotenv", "email"], version = "^2.3"}
 pydantic-settings = "^2.0.3"
+google-cloud-storage = "^2.14.0"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "^2.0.1"
