--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,3 +26,5 @@ sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.20 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.7.1 ; python_version >= "3.11" and python_version < "4.0"
+pytest-asyncio==0.19.0
+pytest==7.1.1
