--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^6.17.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "next": "^13.5.5",
     "react": "^18",
