--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,3 +28,4 @@ starlette==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.7.1 ; python_version >= "3.11" and python_version < "4.0"
 pytest-asyncio==0.19.0
 pytest==7.1.1
+httpx==0.25.2
