--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -10,18 +10,22 @@ jobs:
     environment: production
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Google Cloud
         uses: google-github-actions/setup-gcloud@v2.0.1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
           export_default_credentials: true
+
+      - name: Authenticate Google Cloud
+        uses: google-github-actions/auth@v2.0.0
+        with:
+          credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
 
       - name: Build and Deploy Backend
         run: |
-          gcloud builds submit --config cloudbuild-backend.yaml --substitutions=_REGION="europe-west6",_CLOUDSQL_INSTANCES="${{ secrets.GCP_PROJECT_ID }}:europe-west6:e-skola-mat",
+          gcloud builds submit --config .github/workflows/cloudbuild/cloudbuild-backend.yaml --substitutions=_REGION="europe-west6",_CLOUDSQL_INSTANCES="${{ secrets.GCP_PROJECT_ID }}:europe-west6:e-skola-mat",
           _DEFAULT_DATABASE_PASSWORD="${{ secrets.DEFAULT_DATABASE_PASSWORD }}",_FIRST_SUPERUSER_PASSWORD="${{ secrets.FIRST_SUPERUSER_PASSWORD }}",
           _SECRET_KEY="${{ secrets.SECRET_KEY }}",_TEST_DATABASE_PASSWORD="${{ secrets.TEST_DATABASE_PASSWORD }}",_ACCESS_TOKEN_EXPIRE_MINUTES="${{ env.ACCESS_TOKEN_EXPIRE_MINUTES }}"
           ,_ALLOWED_HOSTS="${{ env.ALLOWED_HOSTS }}",_BACKEND_CORS_ORIGINS="${{ env.BACKEND_CORS_ORIGINS }}",_DEFAULT_DATABASE_DB="${{ env.DEFAULT_DATABASE_DB }}",
