--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: production
+    varsironment: production
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,13 +26,13 @@ jobs:
         run: |
           gcloud builds submit --config .github/workflows/cloudbuild/cloudbuild-backend.yml --substitutions=_REGION="europe-west6",_CLOUDSQL_INSTANCES="${{ secrets.GCP_PROJECT_ID }}:europe-west6:e-skola-mat",
           _DEFAULT_DATABASE_PASSWORD="${{ secrets.DEFAULT_DATABASE_PASSWORD }}",_FIRST_SUPERUSER_PASSWORD="${{ secrets.FIRST_SUPERUSER_PASSWORD }}",
-          _SECRET_KEY="${{ secrets.SECRET_KEY }}",_TEST_DATABASE_PASSWORD="${{ secrets.TEST_DATABASE_PASSWORD }}",_ACCESS_TOKEN_EXPIRE_MINUTES="${{ env.ACCESS_TOKEN_EXPIRE_MINUTES }}"
-          ,_ALLOWED_HOSTS="${{ env.ALLOWED_HOSTS }}",_BACKEND_CORS_ORIGINS="${{ env.BACKEND_CORS_ORIGINS }}",_DEFAULT_DATABASE_DB="${{ env.DEFAULT_DATABASE_DB }}",
-          _DEFAULT_DATABASE_HOSTNAME="${{ env.DEFAULT_DATABASE_HOSTNAME }}",_DEFAULT_DATABASE_PORT="${{ env.DEFAULT_DATABASE_PORT }}",
-          _DEFAULT_DATABASE_USER="${{ env.DEFAULT_DATABASE_USER }}",_ENVIRONMENT="${{ env.ENVIRONMENT }}",_FIRST_SUPERUSER_EMAIL="${{ env.FIRST_SUPERUSER_EMAIL }}",
-          _GCP_BUCKET="${{ env.GCP_BUCKET }}",_GCP_PROJECT_ID="${{ env.GCP_PROJECT_ID }}",_REFRESH_TOKEN_EXPIRE_MINUTES="${{ env.REFRESH_TOKEN_EXPIRE_MINUTES }}",
-          _TEST_DATABASE_DB="${{ env.TEST_DATABASE_DB }}",_TEST_DATABASE_HOSTNAME="${{ env.TEST_DATABASE_HOSTNAME }}",_TEST_DATABASE_PORT="${{ env.TEST_DATABASE_PORT }}",
-          _TEST_DATABASE_USER="${{ env.TEST_DATABASE_USER }}"
+          _SECRET_KEY="${{ secrets.SECRET_KEY }}",_TEST_DATABASE_PASSWORD="${{ secrets.TEST_DATABASE_PASSWORD }}",_ACCESS_TOKEN_EXPIRE_MINUTES="${{ vars.ACCESS_TOKEN_EXPIRE_MINUTES }}"
+          ,_ALLOWED_HOSTS="${{ vars.ALLOWED_HOSTS }}",_BACKEND_CORS_ORIGINS="${{ vars.BACKEND_CORS_ORIGINS }}",_DEFAULT_DATABASE_DB="${{ vars.DEFAULT_DATABASE_DB }}",
+          _DEFAULT_DATABASE_HOSTNAME="${{ vars.DEFAULT_DATABASE_HOSTNAME }}",_DEFAULT_DATABASE_PORT="${{ vars.DEFAULT_DATABASE_PORT }}",
+          _DEFAULT_DATABASE_USER="${{ vars.DEFAULT_DATABASE_USER }}",_FIRST_SUPERUSER_EMAIL="${{ vars.FIRST_SUPERUSER_EMAIL }}",
+          _GCP_BUCKET="${{ vars.GCP_BUCKET }}",_GCP_PROJECT_ID="${{ vars.GCP_PROJECT_ID }}",_REFRESH_TOKEN_EXPIRE_MINUTES="${{ vars.REFRESH_TOKEN_EXPIRE_MINUTES }}",
+          _TEST_DATABASE_DB="${{ vars.TEST_DATABASE_DB }}",_TEST_DATABASE_HOSTNAME="${{ vars.TEST_DATABASE_HOSTNAME }}",_TEST_DATABASE_PORT="${{ vars.TEST_DATABASE_PORT }}",
+          _TEST_DATABASE_USER="${{ vars.TEST_DATABASE_USER }}"
 
       - name: Check Deployment Status
         run: |
