fix: changing to vars instead of envs

--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    varsironment: production
+    environment: production
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
           _SECRET_KEY="${{ secrets.SECRET_KEY }}",_TEST_DATABASE_PASSWORD="${{ secrets.TEST_DATABASE_PASSWORD }}",_ACCESS_TOKEN_EXPIRE_MINUTES="${{ vars.ACCESS_TOKEN_EXPIRE_MINUTES }}"
           ,_ALLOWED_HOSTS="${{ vars.ALLOWED_HOSTS }}",_BACKEND_CORS_ORIGINS="${{ vars.BACKEND_CORS_ORIGINS }}",_DEFAULT_DATABASE_DB="${{ vars.DEFAULT_DATABASE_DB }}",
           _DEFAULT_DATABASE_HOSTNAME="${{ vars.DEFAULT_DATABASE_HOSTNAME }}",_DEFAULT_DATABASE_PORT="${{ vars.DEFAULT_DATABASE_PORT }}",
-          _DEFAULT_DATABASE_USER="${{ vars.DEFAULT_DATABASE_USER }}",_FIRST_SUPERUSER_EMAIL="${{ vars.FIRST_SUPERUSER_EMAIL }}",
+          _DEFAULT_DATABASE_USER="${{ vars.DEFAULT_DATABASE_USER }}",_varsIRONMENT="${{ vars.varsIRONMENT }}",_FIRST_SUPERUSER_EMAIL="${{ vars.FIRST_SUPERUSER_EMAIL }}",
           _GCP_BUCKET="${{ vars.GCP_BUCKET }}",_GCP_PROJECT_ID="${{ vars.GCP_PROJECT_ID }}",_REFRESH_TOKEN_EXPIRE_MINUTES="${{ vars.REFRESH_TOKEN_EXPIRE_MINUTES }}",
           _TEST_DATABASE_DB="${{ vars.TEST_DATABASE_DB }}",_TEST_DATABASE_HOSTNAME="${{ vars.TEST_DATABASE_HOSTNAME }}",_TEST_DATABASE_PORT="${{ vars.TEST_DATABASE_PORT }}",
           _TEST_DATABASE_USER="${{ vars.TEST_DATABASE_USER }}"
