debug: hard coding array values in cloudbuild to check if that solves the issue

--- a/.github/workflows/cloudbuild/cloudbuild-backend.yml
+++ b/.github/workflows/cloudbuild/cloudbuild-backend.yml
@@ -15,9 +15,9 @@ steps:
         "--build-arg",
         "ACCESS_TOKEN_EXPIRE_MINUTES=$_ACCESS_TOKEN_EXPIRE_MINUTES",
         "--build-arg",
-        "ALLOWED_HOSTS=$_ALLOWED_HOSTS",
+        "ALLOWED_HOSTS=['localhost','127.0.0.1','sample-zeaqndbcnq-oa.a.run.app']",
         "--build-arg",
-        "BACKEND_CORS_ORIGINS=$_BACKEND_CORS_ORIGINS",
+        "BACKEND_CORS_ORIGINS=['http://localhost:3000','http://localhost:8001','https://e-skola-mat.vercel.app']",        
         "--build-arg",
         "DEFAULT_DATABASE_DB=$_DEFAULT_DATABASE_DB",
         "--build-arg",
