fix: fixing contex of docker build

--- a/.github/workflows/cloudbuild/cloudbuild-backend.yml
+++ b/.github/workflows/cloudbuild/cloudbuild-backend.yml
@@ -3,9 +3,12 @@ steps:
     args:
       [
         "build",
+        "-f"
         "-t",
         "gcr.io/$_PROJECT_ID/sample:$_COMMIT_SHA",
-        ".",
+        - "--file"
+        - "backend/Dockerfile"
+        - "backend"
         "--build-arg",
         "DEFAULT_DATABASE_PASSWORD=$_DEFAULT_DATABASE_PASSWORD",
         "--build-arg",
