fix: fixing contex of docker build

--- a/.github/workflows/cloudbuild/cloudbuild-backend.yml
+++ b/.github/workflows/cloudbuild/cloudbuild-backend.yml
@@ -8,7 +8,7 @@ steps:
         "gcr.io/$_PROJECT_ID/sample:$_COMMIT_SHA",
         - "--file"
         - "backend/Dockerfile"
-        - "backend"
+        - "backend",
         "--build-arg",
         "DEFAULT_DATABASE_PASSWORD=$_DEFAULT_DATABASE_PASSWORD",
         "--build-arg",
