fix: changing to use diffrent Dockerfile without .env var

--- a/.github/workflows/cloudbuild/cloudbuild-backend.yml
+++ b/.github/workflows/cloudbuild/cloudbuild-backend.yml
@@ -4,7 +4,7 @@ steps:
       [
         "build",
         "--file",
-        "backend/Dockerfile",
+        "backend/Dockerfile.prod",
         "-t",
         "gcr.io/$_PROJECT_ID/sample:$_COMMIT_SHA",
         "backend",
