--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -4,7 +4,6 @@ anyio==3.7.1 ; python_version >= "3.11" and python_version < "4.0"
 asyncpg==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
 autoflake==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
 bcrypt==4.0.1 ; python_version >= "3.11" and python_version < "4.0"
-black==23.7.0 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2023.7.22 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.11" and python_version < "4.0"
 cfgv==3.4.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -20,13 +19,10 @@ filelock==3.12.3 ; python_version >= "3.11" and python_version < "4.0"
 flake8==6.1.0 ; python_version >= "3.11" and python_version < "4.0"
 greenlet==2.0.2 ; python_version >= "3.11" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.11" and python_version < "4.0" and platform_machine == "WIN32"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
-httpcore==0.16.3 ; python_version >= "3.11" and python_version < "4.0"
 httptools==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
-httpx==0.23.3 ; python_version >= "3.11" and python_version < "4.0"
 identify==2.5.27 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.11" and python_version < "4.0"
-isort==5.12.0 ; python_version >= "3.11" and python_version < "4.0"
 mako==1.2.4 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
 mccabe==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -46,7 +42,6 @@ pydantic==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
 pydantic[dotenv,email]==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
 pyflakes==3.1.0 ; python_version >= "3.11" and python_version < "4.0"
 pyjwt[crypto]==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
-pytest-asyncio==0.20.3 ; python_version >= "3.11" and python_version < "4.0"
 pytest==7.4.2 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 python-multipart==0.0.5 ; python_version >= "3.11" and python_version < "4.0"
@@ -63,3 +58,8 @@ uvloop==0.17.0 ; sys_platform != "win32" and sys_platform != "cygwin" and platfo
 virtualenv==20.24.4 ; python_version >= "3.11" and python_version < "4.0"
 watchfiles==0.20.0 ; python_version >= "3.11" and python_version < "4.0"
 websockets==11.0.3 ; python_version >= "3.11" and python_version < "4.0"
+pytest-asyncio==0.19.0
+httpx==0.25.2
+black==23.12.1
+isort==5.13.2
+
