--- a/.github/workflows/integration-workflow.yml
+++ b/.github/workflows/integration-workflow.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Install Dependencies
         run: |
           cd backend
+          pip install -r requirements.txt
           pip install -r requirements-dev.txt
 
   
