ci: enc arrays in env

--- a/.github/workflows/cloudbuild/cloudbuild-backend.yml
+++ b/.github/workflows/cloudbuild/cloudbuild-backend.yml
@@ -66,9 +66,27 @@ steps:
         "--allow-unauthenticated",
         "--set-cloudsql-instances",
         "${_CLOUDSQL_INSTANCES}",
-        "--set-env-vars",
-        "DEFAULT_DATABASE_PASSWORD=$_DEFAULT_DATABASE_PASSWORD,FIRST_SUPERUSER_PASSWORD=$_FIRST_SUPERUSER_PASSWORD,TEST_DATABASE_PASSWORD=$_TEST_DATABASE_PASSWORD,ACCESS_TOKEN_EXPIRE_MINUTES=$_ACCESS_TOKEN_EXPIRE_MINUTES,ALLOWED_HOSTS='localhost,127.0.0.1,sample-zeaqndbcnq-oa.a.run.app',BACKEND_CORS_ORIGINS='http://localhost:3000,http://localhost:8001,https://e-skola-mat.vercel.app',DEFAULT_DATABASE_DB=$_DEFAULT_DATABASE_DB,DEFAULT_DATABASE_HOSTNAME=$_DEFAULT_DATABASE_HOSTNAME,DEFAULT_DATABASE_PORT=$_DEFAULT_DATABASE_PORT,DEFAULT_DATABASE_USER=$_DEFAULT_DATABASE_USER,ENVIRONMENT=$_ENVIRONMENT,FIRST_SUPERUSER_EMAIL=$_FIRST_SUPERUSER_EMAIL,GCP_BUCKET=$_GCP_BUCKET,GCP_PROJECT_ID=$_GCP_PROJECT_ID,REFRESH_TOKEN_EXPIRE_MINUTES=$_REFRESH_TOKEN_EXPIRE_MINUTES,TEST_DATABASE_DB=$_TEST_DATABASE_DB,TEST_DATABASE_HOSTNAME=$_TEST_DATABASE_HOSTNAME,TEST_DATABASE_PORT=$_TEST_DATABASE_PORT,TEST_DATABASE_USER=$_TEST_DATABASE_USER",
-        "--port",
-        "8080",
+        - >
+          DEFAULT_DATABASE_PASSWORD=$_DEFAULT_DATABASE_PASSWORD,
+          FIRST_SUPERUSER_PASSWORD=$_FIRST_SUPERUSER_PASSWORD,
+          TEST_DATABASE_PASSWORD=$_TEST_DATABASE_PASSWORD,
+          ACCESS_TOKEN_EXPIRE_MINUTES=$_ACCESS_TOKEN_EXPIRE_MINUTES,
+          ALLOWED_HOSTS='["localhost","127.0.0.1","sample-zeaqndbcnq-oa.a.run.app"]',
+          BACKEND_CORS_ORIGINS='["http://localhost:3000","http://localhost:8001","https://e-skola-mat.vercel.app"]',
+          DEFAULT_DATABASE_DB=$_DEFAULT_DATABASE_DB,
+          DEFAULT_DATABASE_HOSTNAME=$_DEFAULT_DATABASE_HOSTNAME,
+          DEFAULT_DATABASE_PORT=$_DEFAULT_DATABASE_PORT,
+          DEFAULT_DATABASE_USER=$_DEFAULT_DATABASE_USER,
+          ENVIRONMENT=$_ENVIRONMENT,
+          FIRST_SUPERUSER_EMAIL=$_FIRST_SUPERUSER_EMAIL,
+          GCP_BUCKET=$_GCP_BUCKET,
+          GCP_PROJECT_ID=$_GCP_PROJECT_ID,
+          REFRESH_TOKEN_EXPIRE_MINUTES=$_REFRESH_TOKEN_EXPIRE_MINUTES,
+          TEST_DATABASE_DB=$_TEST_DATABASE_DB,
+          TEST_DATABASE_HOSTNAME=$_TEST_DATABASE_HOSTNAME,
+          TEST_DATABASE_PORT=$_TEST_DATABASE_PORT,
+          TEST_DATABASE_USER=$_TEST_DATABASE_USER
+      - '--port'
+      - '8080'
       ]
   
