--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"axios": "^1.5.1",
 		"babel-preset-next": "^1.4.0",
 		"bootstrap": "^5.3.2",
+		"jwt-decode": "^4.0.0",
 		"moment": "^2.29.4",
 		"next": "^13.5.5",
 		"react": "^18",
